--- a/insex.html
+++ b/insex.html
@@ -20,7 +20,7 @@
 
 
         <div class="task_2">
-            <div class="pane" onclick="task_2(this)">
+            <div class="pane">
                 <div class="pane__BlockMain">
                     <h3>Лошадь</h3>
                 </div>
